--- a/main/order.css
+++ b/main/order.css
@@ -1,3 +1,60 @@
+
+.container{
+	width: 80%;
+	margin: 0 auto;
+	padding: 1%;
+	text-align: center;
+}
+
+.img-responsive{
+	width: 100%;
+}
+
+.img-curve{
+	border-radius: 2rem;
+}
+
+.text-right{
+	text-align: right;
+}
+.text-center{
+	text-align: center;
+}
+
+.text-left{
+	text-align: left;
+}
+
+.text-white{
+	color: wheat;
+}
+
+
+.clearfix{
+	clear: both;
+	float: none;
+}
+
+a{
+	color: black;
+	text-decoration: none;
+	display: inline-flex;
+	
+}
+
+a:hover{
+	color: darkgoldenrod;
+}
+
+.food-search{
+	background-image: url(none);
+}
+
+
+
+
+
+
 .order .row{
 	padding: 2rem;
 	box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
@@ -39,10 +96,10 @@
 .order .row form .inputBox input, .order .row form textarea{
 	padding: 1rem;
 	margin: 1rem 0;
-	font-size: 1.7rem;
+	font-size: 1rem;
 	color: #333;
 	text-transform: none;
-	border: 1rem solid rgba(0, 0, 0, .5);
+	border: .2rem solid wheat;
 	width: 49%;
 }
 .order .row form textarea{
@@ -52,34 +109,45 @@
 }
 
 .order .row form .btn{
-	background: none;
+	background: plum;
+	border-radius: .5rem;
+	font-size: 1rem;
+	cursor: pointer;
 }
 
-.order .row form .btn:hover{
+/* .order .row form .btn:hover{
 	background: var(gold);
+} */
+
+input .btn:hover{
+	color: black;
 }
 
 .footer{
 	background: darkgrey;
 	text-align: center;
 }
-.footer .share{
+.footer .share a{
 	display:flex;
 	gap: 1.5rem;
 	justify-content: center;
-	flex-wrap: wrap;
+	display: inline-flex;
+	text-decoration: none;
+	text-transform: uppercase;
+	padding: 2rem;
+	
 }
 
 .footer .credit{
 	padding: 2.5rem 1rem;
-	color: aqua;
+	color: black;
 	font-weight: normal;
-	font-size: 2rem;
+	font-size: 1.2rem;
 }
 
-.footer .credit span{
-	color: var(--darkgoldenrod);
-}
+
+
+
 
 #scroll-top{
 	position: fixed;
@@ -87,8 +155,7 @@
 	right: 2rem;
 	padding: .5rem 1.5rem;
 	font-size: 4rem;
-	background: var(--darkgoldenrod);
-	color: aqua;
+	color: palegreen;
 	border-radius: .5rem;
 	transition: 1s linear;
 	z-index: 1000;
@@ -96,3 +163,4 @@
 #scroll-top.active{
 	top: calc(100% - 12rem);
 }
+
